# compress

./: .gitignore  CMakeLists.txt  Makefile  README.md  algorithms.cpp  algorithms.h  compress.cpp
.github/classroom/: autograding.json
algorithms/: AlgorithmInterface.h  Huffman.cpp  Huffman.h  LZW.cpp  LZW.h
lib/: avl_map.h  bitfstream.h  bitstream.h  cstring.cpp  cstring.h  functional.h  map.h  rb_map.h  string.cpp  string.h  utility.h  vector.h
